--- a/clusterloader2/pkg/measurement/common/network-policy/manifests/policy-egress-allow-target-pods.yaml
+++ b/clusterloader2/pkg/measurement/common/network-policy/manifests/policy-egress-allow-target-pods.yaml
@@ -1,3 +1,61 @@
+{{ if eq .NetworkPolicy_Type "cnp" }}
+apiVersion: cilium.io/v2
+kind: CiliumNetworkPolicy
+metadata:
+  name: {{.Name}}
+  namespace: {{.ClientNamespace}} # since this policy is egress, the namespace is the client namespace
+  labels:
+    type: {{.TypeLabelValue}}
+spec:
+  endpointSelector:
+    matchLabels:
+      type: {{.TypeLabelValue}}
+  egress:
+  - toEndpoints:
+    - matchLabels:
+        net-pol-test: {{.TargetLabelValue}}
+{{if .OnlyTargetNamespace}}
+        k8s:io.kubernetes.pod.namespace: {{.TargetNamespace}}
+{{end}}
+{{if .L7Enabled}}
+    toPorts:
+    - ports:
+      - port: "{{.TargetPort}}"
+        protocol: TCP
+      rules:
+        http:
+        - method: GET
+          path: /
+{{end}}
+{{else if .NetworkPolicy_Type "ccnp" }}
+apiVersion: cilium.io/v2
+kind: CiliumClusterwideNetworkPolicy
+metadata:
+  name: {{.Name}}
+  labels:
+    type: {{.TypeLabelValue}}
+spec:
+  endpointSelector:
+    matchLabels:
+      type: {{.TypeLabelValue}}
+  egress:
+  - toEndpoints:
+    - matchLabels:
+        net-pol-test: {{.TargetLabelValue}}
+{{if .OnlyTargetNamespace}}
+        k8s:io.kubernetes.pod.namespace: {{.TargetNamespace}}
+{{end}}
+{{if .L7Enabled}}
+    toPorts:
+    - ports:
+      - port: "{{.TargetPort}}"
+        protocol: TCP
+      rules:
+        http:
+        - method: GET
+          path: /
+{{end}}
+{{else}}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
@@ -22,4 +80,5 @@ spec:
           kubernetes.io/metadata.name: {{.TargetNamespace}}
 {{else}}
       namespaceSelector: {}
+{{end}}
 {{end}}
