--- a/util-images/network/netperfbenchmark/Dockerfile
+++ b/util-images/network/netperfbenchmark/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.15.2 AS build-env
+FROM golang:1.23 AS build-env
 ARG gopkg=k8s.io/perf-tests/util-images/network/netperfbenchmark
 
 ADD [".", "/go/src/$gopkg"]
@@ -7,7 +7,7 @@ ADD [".", "/go/src/$gopkg"]
 WORKDIR /go/src/$gopkg
 RUN CGO_ENABLED=0 go build -o /workspace/network ./cmd
 
-FROM  golang:1.15.2-alpine3.12
+FROM  golang:1.23-alpine3.21
 ENV LD_LIBRARY_PATH=/usr/local/lib
 
 RUN apk update \
@@ -19,11 +19,11 @@ RUN curl -LO https://iperf.fr/download/source/iperf-2.0.9-source.tar.gz && tar z
 RUN rm -rf iperf-2.0.9-source.tar.gz
 RUN cd iperf-2.0.9 && ./configure --prefix=/usr/local --bindir /usr/local/bin && make && make install
 
-ENV SIEGE_VERSION=3.1.4
+ENV SIEGE_VERSION=4.1.7
 
 RUN curl -LO http://download.joedog.org/siege/siege-$SIEGE_VERSION.tar.gz > siege-$SIEGE_VERSION.tar.gz && tar -xf siege-${SIEGE_VERSION}.tar.gz
 RUN rm -rf siege-${SIEGE_VERSION}.tar.gz
-RUN cd siege-${SIEGE_VERSION} && ./configure &&  make install
+RUN cd siege-${SIEGE_VERSION} && ./configure && make && make install
 
 WORKDIR /workspace
 COPY --from=build-env /workspace/network .
