--- a/network/tools/network-policy-enforcement-latency/policy-creation-enforcement-latency/example-manifests/permissions.yaml
+++ b/network/tools/network-policy-enforcement-latency/policy-creation-enforcement-latency/example-manifests/permissions.yaml
@@ -15,6 +15,9 @@ rules:
 - apiGroups: ["networking.k8s.io"]
   resources: ["networkpolicies"]
   verbs: ["get", "list", "watch"]
+- apiGroups: ["cilium.io"]
+  resources: ["ciliumclusterwidenetworkpolicies"]
+  verbs: ["get", "list", "watch"]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -49,4 +52,4 @@ spec:
     to:
     - ipBlock:
         # Use "kubectl get endpoints --namespace default kubernetes" to get the IP address of kube-apiserver.
-        cidr: {{.kubeAPIServerIP}}/32
+        cidr: 4.249.144.116/32
