--- a/network/tools/network-policy-enforcement-latency/policy-creation-enforcement-latency/example-manifests/policy-allow-egress-to-target-pods.yaml
+++ b/network/tools/network-policy-enforcement-latency/policy-creation-enforcement-latency/example-manifests/policy-allow-egress-to-target-pods.yaml
@@ -14,6 +14,4 @@ spec:
     - podSelector:
         matchLabels:
           target: test-policy
-      namespaceSelector:
-        matchLabels:
-          kubernetes.io/metadata.name: test-policy
+          k8s:io.kubernetes.pod.namespace: test-policy
