--- a/network/benchmarks/netloader/Makefile
+++ b/network/benchmarks/netloader/Makefile
@@ -1,5 +1,6 @@
 USERNAME ?= sanamsarath
 PROJECT ?= netloader
+REGISTRY ?= acnpublic.azurecr.io
 IMG ?= $(USERNAME)/$(PROJECT)
 TAG ?= 0.7
 
@@ -7,10 +8,10 @@ all: push
 
 .PHONY: build
 build:
-	docker build --pull -t $(IMG):$(TAG) .
+	docker build --pull -t $(REGISTRY)/$(IMG):$(TAG) .
 	@echo "Built $(IMG):$(TAG)"
 
 .PHONY: push
 push: build
-	docker push $(IMG):$(TAG)
+	docker push $(REGISTRY)/$(IMG):$(TAG)
 	@echo "Pushed $(IMG):$(TAG)"
