--- a/clusterloader2/pkg/measurement/common/network-policy/network-policy-soak/manifests/target_deploy.yaml
+++ b/clusterloader2/pkg/measurement/common/network-policy/network-policy-soak/manifests/target_deploy.yaml
@@ -18,7 +18,7 @@ spec:
       nodeSelector:
         slo: "true"
       containers:
-      - image: sanamsarath/h2playground:0.2
+      - image: acnpublic.azurecr.io/sanamsarath/h2playground:0.3
         name: nginx
         ports:
         - containerPort: {{.TargetPort}}
