feat: enhance deployment manifests with dynamic labels for tracking and improve template management in deployment methods

--- a/clusterloader2/pkg/measurement/common/network-policy/network-policy-soak/manifests/target_deploy.yaml
+++ b/clusterloader2/pkg/measurement/common/network-policy/network-policy-soak/manifests/target_deploy.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   labels:
     {{ (StructuralData .TargetLabelKey)}}: {{.TargetLabelValue}}
+    # this is dynamically generated and used for group deployment and deletion tracking
+    {{ (StructuralData .TargetDeploymentLabelKey)}}: {{.TargetDeploymentLabelValue}}
   name: {{.TargetName}}
   namespace: {{.TargetNamespace}}
 spec:
@@ -10,10 +12,12 @@ spec:
   selector:
     matchLabels:
       {{ (StructuralData .TargetLabelKey)}}: {{.TargetLabelValue}}
+      {{ (StructuralData .TargetDeploymentLabelKey)}}: {{.TargetDeploymentLabelValue}}
   template:
     metadata:
       labels:
-        app: target
+        {{ (StructuralData .TargetLabelKey)}}: {{.TargetLabelValue}}
+        {{ (StructuralData .TargetDeploymentLabelKey)}}: {{.TargetDeploymentLabelValue}}
     spec:
       nodeSelector:
         slo: "true"
