--- a/clusterloader2/pkg/measurement/common/network-policy/network-policy-soak/manifests/client_deploy.yaml
+++ b/clusterloader2/pkg/measurement/common/network-policy/network-policy-soak/manifests/client_deploy.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   labels:
     {{ (StructuralData .ClientLabelKey)}}: {{.ClientLabelValue}}
+    # this is dynamically generated and used for group deployment and deletion tracking
+    {{ (StructuralData .ClientDeploymentLabelKey)}}: {{.ClientDeploymentLabelValue}}
   name: {{.UniqueName}}
   namespace: {{.ClientNamespace}}
 spec:
@@ -10,10 +12,12 @@ spec:
   selector:
     matchLabels:
       {{ (StructuralData .ClientLabelKey)}}: {{.ClientLabelValue}}
+      {{ (StructuralData .ClientDeploymentLabelKey)}}: {{.ClientDeploymentLabelValue}}
   template:
     metadata:
       labels:
         {{ (StructuralData .ClientLabelKey)}}: {{.ClientLabelValue}}
+        {{ (StructuralData .ClientDeploymentLabelKey)}}: {{.ClientDeploymentLabelValue}}
     spec:
       nodeSelector:
         node: "client"
